# finalsistemahospitalario

./: .gitignore  ANALISIS_REQUISITOS_ENFERMERO.md  ARQUITECTURA_SISTEMA_COMPLETO.md  ASIGNACIONES_ENFERMEROS_COMPLETO.md  BED_AVAILABILITY_GUIDE.md  BED_AVAILABILITY_SUMMARY.md  CHANGELOG_SECURITY_PHASE1.md  CIERRE_SESION.md  COMPLIANCE_ANALYSIS.md  COMPLIANCE_FEATURES_SUMMARY.md  COMUNICACION_TAURI_REACT.md  CURP_UNIQUENESS_GUIDE.md  DATABASE_VALIDATION.md  DISCHARGE_ORDER_SYSTEM.md  DISCHARGE_SYSTEM_SUMMARY.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_SECURITY_PHASE1.md  FINAL_CHECKLIST.md  GUIA_INTEGRACION_ENFERMERO.md  GUIA_INTEGRACION_NUEVOS_COMPONENTES.md  IMPLEMENTACIONES_REALIZADAS.md  INDEX_PHASE1.md  INDICE_DOCUMENTACION.md  INTEGRATION_GUIDE.md  MEDICATION_STOCK_CONTROL_GUIDE.md  NUEVAS_FUNCIONES_DATABASE.md  PASSWORD_RESET_EXECUTIVE_SUMMARY.md  PASSWORD_RESET_SECURITY_GUIDE.md  PASSWORD_RESET_TESTING_GUIDE.md  PASSWORD_SECURITY_RT02.md  PLATFORM_COMPATIBILITY.md  README.md  README_PHASE1.md  RESUMEN_COMPLETO.md  RESUMEN_EJECUTIVO_FINAL.md  RESUMEN_IMPLEMENTACION_ENFERMERO.md  RT01_RT02_SUMMARY.md  SAVE_ALL_FEATURE.md  SECURITY_FEATURES.md  SUMMARY_PHASE1.md  (+20 more)
database/: schema.sql
scripts/: check-inventory.cjs  diagnose.cjs  puppeteer-test.cjs  query-db.cjs  query-db.js  test-login.cjs  update-password.cjs
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BedManagementModal.jsx  CareFormComponents.jsx  DischargeOrderModal.jsx  EditableNotesList.jsx  ErrorBoundary.jsx  ErrorDashboard.jsx  LoginForm.jsx  (+20 more)
(+12 files in other folders)
